@@ -299,7 +299,7 @@
         </parameters>
       </constructor>
     </struct>
-    <alias name="PixMaxDepth" cname="ArtPixMaxDepth" type="art_u8" />
+    <alias name="PixMaxDepth" cname="ArtPixMaxDepth" type="unsigned char" />
     <struct name="Point" cname="ArtPoint">
       <field cname="x" type="double" />
       <field cname="y" type="double" />
@@ -686,7 +686,7 @@
         </parameters>
       </method>
     </struct>
-    <alias name="UtaBbox" cname="ArtUtaBbox" type="art_u32" />
+    <alias name="UtaBbox" cname="ArtUtaBbox" type="unsigned int" />
     <struct name="Vpath" cname="ArtVpath">
       <field cname="code" type="ArtPathcode" />
       <field cname="x" type="double" />
@@ -748,6 +748,9 @@
       <field cname="dash" type="double*" />
     </struct>
     <alias name="ArtBoolean" cname="art_boolean" type="int" />
+    <alias name="ArtU16" cname="art_u16" type="unsigned short" />
+    <alias name="ArtU32" cname="art_u32" type="unsigned int" />
+    <alias name="ArtU8" cname="art_u8" type="unsigned char" />
     <class name="Affine" cname="ArtAffine_">
       <method name="Equal" cname="art_affine_equal" shared="true">
         <return-type type="int" />
