@@ -4285,8 +4285,8 @@
       </callback>
     </struct>
     <struct name="PixbufModulePattern" cname="GdkPixbufModulePattern">
-      <field cname="char* prefix" type="unsigned" />
-      <field cname="char* mask" type="unsigned" />
+      <field cname="prefix" type="unsigned char*" />
+      <field cname="mask" type="unsigned char*" />
       <field cname="relevance" type="int" />
     </struct>
     <struct name="Pixdata" cname="GdkPixdata">
