@@ -729,13 +729,13 @@
       <field cname="state" type="int" />
       <field cname="grabbed_event_mask" type="guint" />
       <field cname="close_enough" type="int" />
-      <field cname="center_scroll_region" bits="1" type="unsigned" />
-      <field cname="need_update" bits="1" type="unsigned" />
-      <field cname="need_redraw" bits="1" type="unsigned" />
-      <field cname="need_repick" bits="1" type="unsigned" />
-      <field cname="left_grabbed_item" bits="1" type="unsigned" />
-      <field cname="in_repick" bits="1" type="unsigned" />
-      <field cname="aa" bits="1" type="unsigned" />
+      <field cname="center_scroll_region" bits="1" type="unsigned int" />
+      <field cname="need_update" bits="1" type="unsigned int" />
+      <field cname="need_redraw" bits="1" type="unsigned int" />
+      <field cname="need_repick" bits="1" type="unsigned int" />
+      <field cname="left_grabbed_item" bits="1" type="unsigned int" />
+      <field cname="in_repick" bits="1" type="unsigned int" />
+      <field cname="aa" bits="1" type="unsigned int" />
       <field cname="dither" type="GdkRgbDither" />
       <property name="Aa" cname="aa" type="gboolean" readable="true" writeable="true" construct-only="true" />
       <signal name="DrawBackground" cname="draw_background" when="LAST">
@@ -1073,7 +1073,7 @@
       <method name="Grab" cname="gnome_canvas_item_grab">
         <return-type type="int" />
         <parameters>
-          <parameter type="unsigned" name="int" />
+          <parameter type="unsigned int" name="event_mask" />
           <parameter type="GdkCursor*" name="cursor" />
           <parameter type="guint32" name="etime" />
         </parameters>
@@ -1285,7 +1285,7 @@
       <field cname="y1" type="double" />
       <field cname="x2" type="double" />
       <field cname="y2" type="double" />
-      <field cname="path_dirty" bits="1" type="unsigned" />
+      <field cname="path_dirty" bits="1" type="unsigned int" />
       <property name="X1" cname="x1" type="gdouble" readable="true" writeable="true" />
       <property name="Y1" cname="y1" type="gdouble" readable="true" writeable="true" />
       <property name="X2" cname="x2" type="gdouble" readable="true" writeable="true" />
@@ -1497,8 +1497,8 @@
       <field cname="rect" type="ArtIRect" />
       <field cname="buf_rowstride" type="int" />
       <field cname="bg_color" type="guint32" />
-      <field cname="is_bg" bits="1" type="unsigned" />
-      <field cname="is_buf" bits="1" type="unsigned" />
+      <field cname="is_bg" bits="1" type="unsigned int" />
+      <field cname="is_buf" bits="1" type="unsigned int" />
       <method name="EnsureBuf" cname="gnome_canvas_buf_ensure_buf">
         <return-type type="void" />
       </method>
@@ -3748,11 +3748,11 @@
       <field cname="width" type="int" />
       <field cname="fontname" type="char*" />
       <field cname="text" type="char*" />
-      <field cname="editing" bits="1" type="unsigned" />
-      <field cname="selected" bits="1" type="unsigned" />
-      <field cname="focused" bits="1" type="unsigned" />
-      <field cname="is_editable" bits="1" type="unsigned" />
-      <field cname="is_text_allocated" bits="1" type="unsigned" />
+      <field cname="editing" bits="1" type="unsigned int" />
+      <field cname="selected" bits="1" type="unsigned int" />
+      <field cname="focused" bits="1" type="unsigned int" />
+      <field cname="is_editable" bits="1" type="unsigned int" />
+      <field cname="is_text_allocated" bits="1" type="unsigned int" />
       <field cname="_priv" type="GnomeIconTextItemPrivate*" />
       <signal name="TextChanged" cname="text_changed" when="LAST">
         <return-type type="gboolean" />
