@@ -1,9 +1,19 @@
 2004-01-25  Mike Kestner  <mkestner@ximian.com>
 
+	* art/art-api.xml : regen
+	* gdk/gdk-api.xml : regen
+	* generator/SymbolTable.cs : add unsigned char mapping
+	* gnome/gnome-api.xml : regen
+	* parser/gapi2xml.pl : handle unsigned keyword in fields,
+	typedefs, and parameter types.
+	[Fixes #53055]
+
+2004-01-25  Mike Kestner  <mkestner@ximian.com>
+
 	* gdk/gdk-api.xml : regen
 	* gnome/gnome-api.xml : regen
 	* gtk/gtk-api.xml : regen
-	* parser/gapi2.xml.pl : handle typedef struct {...} Foo;
+	* parser/gapi2xml.pl : handle typedef struct {...} Foo;
 	[Fixes #53312]
 
 2004-01-22  Martin Willemoes Hansen  <mwh@sysrq.dk>
